bricks/containers/src/tab/tab-group/tab.shadow.css
:host,
:host-context(html[data-ui="v8-2"]):host([outline="shadow"]) {
  --local-tabs-border-radius: var(--tabs-outlined-border-radius);
  --local-tabs-header-padding: var(--tabs-outlined-header-padding);
  --local-tabs-content-padding: var(--tabs-outlined-content-padding);
  --local-tabs-background: var(--tabs-outlined-background);
  --local-tabs-shadow: var(--tabs-outlined-shadow);
}

:host([outline="none"]),
:host-context(html[data-ui="v8-2"]) {
  --local-tabs-border-radius: 0;
  --local-tabs-header-padding: var(--tabs-header-padding);
  --local-tabs-content-padding: var(--tabs-content-padding);
  --local-tabs-background: none;
  --local-tabs-shadow: none;
}

.tab-wrapper {
  border-radius: var(--local-tabs-border-radius);
  background: var(--local-tabs-background);
  box-shadow: var(--local-tabs-shadow);
}

.tab-nav {
  position: relative;
  display: grid;
  grid-auto-flow: column;
  justify-content: space-between;
  align-items: center;
  padding: var(--local-tabs-header-padding);
}

.tab-nav:before {
  content: "";
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
  border-bottom: 1px solid var(--antd-tabs-title-border-color);
}

.tab-nav.panel {
  padding: 0;
  border-left: 1px solid var(--antd-tabs-title-border-color);
  background: var(--antd-component-background);
}

.tab-item-wrapper {
  display: flex;
  margin-right: 12px;
}

.content {
  padding: var(--local-tabs-content-padding);
}

